# ccnn

./: CMakeLists.txt  README.md
src/: main.cpp  profiling_utils.cpp  profiling_utils.hpp  tensor_utils.cpp  tensor_utils.hpp
src/models/: lenet.cpp  test.cpp
src/models/lenet/: lenet.cpp
src/models/lenet/data/: b1_vals.hpp  b2_vals.hpp  b_fc1_vals.hpp  b_fc2_vals.hpp  b_fc3_vals.hpp  f1_vals.hpp  f2_vals.hpp  f_fc1_vals.hpp  f_fc2_vals.hpp  f_fc3_vals.hpp  t1_vals.hpp
